--- a/common/bootrom/Makefile
+++ b/common/bootrom/Makefile
@@ -1,16 +1,25 @@
-bootrom_img = bootrom.img
+bootrom_img = bootrom.rv64.img bootrom.rv32.img
+bootrom_dump = bootrom.rv64.dump bootrom.rv32.dump
 
 GCC=riscv64-unknown-elf-gcc
+CFLAGS_RV64=-mabi=lp64 -march=rv64ima
+CFLAGS_RV32=-mabi=ilp32 -march=rv32ima
 OBJCOPY=riscv64-unknown-elf-objcopy
 OBJDUMP=riscv64-unknown-elf-objdump
+DTB=/extra/Cache/fpga-zynq/common/bootrom/device-tree/hexa-core.dtb
 
-all: $(bootrom_img)
+img: $(bootrom_img)
+
+dump: $(bootrom_dump)
 
 %.img: %.elf
 	$(OBJCOPY) -O binary --change-addresses=-0x10000 $< $@
 
-%.elf: %.S linker.ld
-	$(GCC) -Tlinker.ld $< -nostdlib -static -o $@
+%.rv32.elf: %.S linker.ld
+	$(GCC) $(CFLAGS_RV32) -DDEVICE_TREE='"$(DTB)"' -Tlinker.ld $< -nostdlib -static -o $@
+
+%.rv64.elf: %.S linker.ld
+	$(GCC) $(CFLAGS_RV64) -DDEVICE_TREE='"$(DTB)"' -Tlinker.ld $< -nostdlib -static -o $@
 
 %.dump: %.elf
 	$(OBJDUMP) -d $< > $@
